[package]
name = "explorer"
version = "0.1.0"
edition = "2021"
authors = ["Charpa"]

[dependencies]
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12", features = ["json"]}
tokio = {version = "1.37", features = ["full"]}
rocksdb = {version = "0.22"}
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
dialoguer = "0.11"
futures = "0.3"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true # Link Time Optimization"
codegen-units = 1